# ai-business-assistant

./: .gitignore  Dockerfile  README.md  docker-compose.yml  index_data.py  load_chroma_data.py  main.py  pyproject.toml  test_rag.py
app/: chat.py  config.py  logger.py  main.py  metrics.py  models.py  semantic_cache.py
app/api/: deps.py  startup.py
app/api/routers/: admin.py  health.py  metrics.py  query.py
app/components/: data_source.py  embedding.py  llm.py  metrics.py  models.py  prompt.py  rag_chain.py  retriever.py  semantic_cache.py  splitter.py  vector_store.py  workflow.py
app/core/: logger.py
app/services/: embedding.py  llm.py  prompt.py  rag_chain.py  retriever.py  splitter.py  vector_store.py
app/test/: index_data.py  load_chroma_data.py  test_gradio.py  test_metrics.py  test_rag.py  test_rag_api.py
app/test/api/: test_admin.py  test_health.py  test_metrics.py  test_query.py
app/test/components/: test_metrics.py  test_rag.py  test_rag_graph.py  test_semantic_cache.py
app/web_ui/: chat.py
src/: Sinbi Muay Thai_data.json
