[project]
name = "aisupport"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.0",
    "fastapi>=0.120.4",
    "gradio>=5.49.1",
    "langchain>=1.0.3",
    "langchain-chroma>=1.0.0",
    "langchain-openai>=1.0.2",
    "langchain-text-splitters>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.11.0",
    "typer==0.12.0",
    "uvicorn>=0.38.0",
]
