[project]
name = "aisupport"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.0",
    "fastapi>=0.120.4",
    "gradio>=5.49.1",
    "langchain>=1.0.3",
    "langchain-chroma>=1.0.0",
    "langchain-openai>=1.0.2",
    "langchain-text-splitters>=1.0.0",
    "langsmith>=0.4.39",
    "mypy>=1.19.1",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.11.0",
    "pylint>=4.0.4",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "redis>=7.0.1",
    "ruff>=0.14.4",
    "testcontainers-redis>=0.0.1rc1",
    "typer==0.12.0",
    "types-requests>=2.32.4.20250913",
    "uvicorn>=0.38.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "PT",  # flake8-pytest-style
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501", # Line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false 

[tool.pylint.messages_control]
disable = [
    "C0111", # missing-docstring (enforce this if you want strict docs)
    "C0103", # invalid-name (sometimes conflicts with pydantic/fastapi)
    "R0903", # too-few-public-methods (common in data classes)
    "W1203", # logging-fstring-interpolation (allow f-strings in logs)
    "W0621", # redefined-outer-name (conflicts with pytest fixtures)
    "W0212", # protected-access (allow access to protected members)
    "R0903", # too-few-public-methods (common in data classes)
]
max-line-length = 88
